// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination grows to min size 1`] = `
<body>
  <main
    id="root"
  >
    <div
      class="sc-bczRLJ cvTmMf"
    >
      <nav
        aria-label="pagination links"
      >
        <ul>
          <li
            class="active"
          >
            <a
              aria-current="page"
              href="#"
            >
              1
            </a>
          </li>
          <li>
            <a
              href="#"
            >
              2
            </a>
          </li>
          <li>
            <a
              href="#"
            >
              3
            </a>
          </li>
          <li>
            <a
              href="#"
            >
              4
            </a>
          </li>
          <li>
            <a
              href="#"
            >
              5
            </a>
          </li>
          <li
            class="disabled"
          >
            <span>
              ...
            </span>
          </li>
          <li>
            <a
              href="#"
            >
              10
            </a>
          </li>
        </ul>
      </nav>
    </div>
  </main>
</body>
`;

exports[`Pagination grows to min size from back 1`] = `
<body>
  <main
    id="root"
  >
    <div
      class="sc-bczRLJ cvTmMf"
    >
      <nav
        aria-label="pagination links"
      >
        <ul>
          <li>
            <a
              href="#"
            >
              1
            </a>
          </li>
          <li
            class="disabled"
          >
            <span>
              ...
            </span>
          </li>
          <li>
            <a
              href="#"
            >
              6
            </a>
          </li>
          <li>
            <a
              href="#"
            >
              7
            </a>
          </li>
          <li>
            <a
              href="#"
            >
              8
            </a>
          </li>
          <li>
            <a
              href="#"
            >
              9
            </a>
          </li>
          <li
            class="active"
          >
            <a
              aria-current="page"
              href="#"
            >
              10
            </a>
          </li>
        </ul>
      </nav>
    </div>
  </main>
</body>
`;

exports[`Pagination matches snapshot 1`] = `
<body>
  <main
    id="root"
  >
    <div
      class="sc-bczRLJ cvTmMf"
    >
      <nav
        aria-label="pagination links"
      >
        <ul>
          <li
            class="active"
          >
            <a
              aria-current="page"
              href="#"
            >
              1
            </a>
          </li>
          <li>
            <a
              href="#"
            >
              2
            </a>
          </li>
          <li>
            <a
              href="#"
            >
              3
            </a>
          </li>
          <li>
            <a
              href="#"
            >
              4
            </a>
          </li>
          <li>
            <a
              href="#"
            >
              5
            </a>
          </li>
          <li>
            <a
              href="#"
            >
              6
            </a>
          </li>
          <li>
            <a
              href="#"
            >
              7
            </a>
          </li>
          <li>
            <a
              href="#"
            >
              8
            </a>
          </li>
          <li>
            <a
              href="#"
            >
              9
            </a>
          </li>
          <li>
            <a
              href="#"
            >
              10
            </a>
          </li>
        </ul>
      </nav>
    </div>
  </main>
</body>
`;

exports[`Pagination matches snapshot with dividers 1`] = `
<body>
  <main
    id="root"
  >
    <div
      class="sc-bczRLJ cvTmMf"
    >
      <nav
        aria-label="pagination links"
      >
        <ul>
          <li>
            <a
              href="#"
            >
              1
            </a>
          </li>
          <li
            class="disabled"
          >
            <span>
              ...
            </span>
          </li>
          <li>
            <a
              href="#"
            >
              4
            </a>
          </li>
          <li
            class="active"
          >
            <a
              aria-current="page"
              href="#"
            >
              5
            </a>
          </li>
          <li>
            <a
              href="#"
            >
              6
            </a>
          </li>
          <li
            class="disabled"
          >
            <span>
              ...
            </span>
          </li>
          <li>
            <a
              href="#"
            >
              10
            </a>
          </li>
        </ul>
      </nav>
    </div>
  </main>
</body>
`;

exports[`Pagination noops 1`] = `
<body>
  <main
    id="root"
  />
</body>
`;
